# renaming-photos

./: LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
scripts/: rename_photos.py
tests/: test_rename.py
